Fix CSS overlap on iphone 5

--- a/src/components/stateful/ArtWork/Artwork.scss
+++ b/src/components/stateful/ArtWork/Artwork.scss
@@ -9,8 +9,8 @@
     .back-btn {
       position: absolute;
       top: 1rem;
-      width: 48px;
-      height: 48px;
+      width: 36px;
+      height: 36px;
       margin: 0 0 0 1.5rem;
       z-index: 2;
       &:hover {
